onStop里关掉输入输出流，并且杀掉两个进程。EditActivity删了一些不必要代码。